--- a/index.html
+++ b/index.html
@@ -3,99 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test</title>
-    <link rel="icon" href="img/Screenshot from 2024-12-18 15-46-39.png" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Merge Conflict Workshop</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Logo</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Pricing</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="p-3 mb-2 bg-body-secondary">
-      <h1 class="text-center mt-3">Welcome to Our Website!</h1>
-      <p class="text-center" style="font-size: 14px">
-        This is a simple Bootstrap layout that adapts to different screen sizes.
-      </p>
-      <div class="gap-2 text-center">
-        <button class="btn btn-primary" type="button">Learn More</button>
-      </div>
-    </div>
-
-    <div
-      class="row row-cols-1 row-cols-md-4 g-4 m-3 justify-content-center"
-      style="max-width: 101%"
-    >
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/1.png" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card 1</h5>
-            <p class="card-text">
-              Some quick example text to bulid on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/2.png" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card 2</h5>
-            <p class="card-text">
-              Some quick example text to bulid on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/3.png" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card 3</h5>
-            <p class="card-text">
-              Some quick example text to bulid on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="p-3 mb-2 bg-body-secondary mt-3 text-center">
-      © 2025 My Website. All rights reserved.
-    </div>
+    <h1>Welcome to the Merge Conflict Workshop</h1>
+    <p>This is an introduction to merge conflicts.</p>
   </body>
 </html>
